# WASM-Game-of-Life

./: Cargo.toml  LICENSE  README.md
src/: board.rs  cell.rs  main.rs  style.css
